--- a/src/Components/ForgotPassword/ForgotPassword.css
+++ b/src/Components/ForgotPassword/ForgotPassword.css
@@ -58,3 +58,28 @@ button:hover {
     padding: 15px;
   }
 }
+
+
+
+  &.dark {
+    background-color: #333;
+    color: #fff;
+  }
+
+  &.light {
+    background-color: #fff;
+    color: #000;
+  }
+
+    &.dark {
+      background-color: #1e1e1e;
+      background-image: none;
+      color: #f0f0f0;
+    }
+  
+
+      &.dark {
+        background-color: #333;
+        color: #f0f0f0;
+        border: 1px solid #555;
+      }
