--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -81,6 +81,9 @@ nav a:hover {
   background-size: 80% 80%;
   color: black;
   border-radius: 3px;
+  padding: 6px;
+  text-decoration: underline;
+  font-size: 20px;
 }
 
 .dark-nav {
