--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -12,12 +12,28 @@
 
 .footer-1 {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 20px;
   width: 40%;
 }
-
+.star-us{
+  display: flex;
+  border: 1px solid white;
+  background: #c3c3c3;
+  padding: 0.5rem;
+  border-radius: 7px;
+  align-items: center;
+  color: black;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.star-us:hover{
+  scale: 1.1;
+}
 .footer-1 img {
-  height: 3rem;
+  height: 4rem;
 }
 
 .footer-half {
@@ -26,7 +42,11 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
-
+.footer-text{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .footer-2 {
   width: 25%;
 }
@@ -34,6 +54,9 @@
 .footer-title {
   text-transform: uppercase;
   font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+  margin: 0px;
 }
 
 .footer-section-title {
