--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -122,7 +122,11 @@ nav a:hover {
     font-size: 14px;
   }
 }
-
+@media (min-width:700px) {
+  body nav .Menu_Icon{
+    display: none;
+  }  
+}
 @media (max-width: 700px) {
   nav {
     padding: 15px 20px; /* Adjust padding for better spacing */
