--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -100,6 +100,11 @@ nav a:hover {
   margin-left: 15px;
 }
 
+.hideHamburger{
+  display: none;
+}
+
+
 /* Media query for tablets */
 @media (max-width: 1100px) {
   nav ul li {
@@ -155,7 +160,12 @@ nav a:hover {
     width: 30px;
     cursor: pointer;
   }
-
+    .hideHamburger{
+      display: block;
+      cursor: pointer;
+    }
+  
+  
   .show-mobile-menu {
     display: block; 
   }
