--- a/src/Components/FAQ/accordian.css
+++ b/src/Components/FAQ/accordian.css
@@ -19,6 +19,7 @@ h2 {
     padding-right: 20px;
     padding-bottom: 15px;
     padding-left: 10px;
+    cursor : pointer;
 } 
 
 .accordian .question:hover {
