Fixed the login page

--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: auto;
-  margin-top: 100px; /* Adjust this value to move the login box down */
+  margin-top: 100px;
   padding-bottom: 10px;
 }
 
@@ -12,93 +12,94 @@
   background-image: linear-gradient(315deg, #ffffff 0%, #91a6ff 74%);
   width: 400px;
   margin: 0 auto;
-  padding: 10px 10px 20px 10px;
+  padding: 20px;
   border: 1px solid #ccc;
   border-radius: 20px;
   background-color: #fff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.login-container > input {
-  outline: none;
-}
-
-.input {
-  padding: 20px;
-  border: none;
-}
-
 h2 {
   font-size: 28px;
-  margin-bottom: 10px;
-  padding: 20px;
+  margin-bottom: 20px;
+  padding: 10px 0;
+}
+
+.input-container {
+  width: 100%;
+  position: relative;
+  margin-bottom: 5px;
 }
 
 input {
   width: 100%;
-  margin-bottom: 20px;
-  padding: 8px;
+  padding: 10px;
   border: 1px solid #ccc;
   border-radius: 10px;
   box-sizing: border-box;
-  border: none;
   outline: none;
 }
 
 button {
-  width: 50%;
-  padding: 20px;
+  width: 90%;
+  padding: 15px;
   border: none;
   border-radius: 10px;
   background-color: #007bff;
   color: #fff;
   cursor: pointer;
+  font-size: 16px;
+  margin-bottom: 20px;
 }
 
 button:hover {
-  background-color: #007bff;
+  background-color: #0056b3;
 }
 
 .login-container p {
   margin-top: 10px;
   text-align: center;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
 }
 
 p a {
   color: #007bff;
   text-decoration: none;
-  margin-top: 12px;
 }
 
 p a:hover {
   color: #0056b3;
   text-decoration: underline;
 }
+
 .googlelogin {
-  padding: 20px;
-  margin-top: 12px;
-  width: 50%;
-  text-align: center;
-  margin-left: 50px;
+  width: 100%;
+  justify-content: center;
+  margin-top: 10px;
 }
+
+.googlelogin button:hover,
+.googlelogin div:hover {
+  background-color: #dbedf8b9;
+  transition: background-color 0.3s ease;
+}
+
 .warningmsg {
-  margin: 0;
+  margin: 3px 0;
   text-align: left;
-  padding: 0;
-  margin-bottom: 10px;
-  /* justify-content: center;
-  display: flex; */
+  color: red;
 }
+
 .eye {
   float: right;
-  left:-9px;
+  left: -9px;
   margin-top: -45px;
+  margin-right: 10px;
   position: relative;
-  z-index: 2;
-  width: 14px; /*Desired width*/
-  height: 14px; /*Desired height*/
+  width: 14px;
+  height: 14px;
 }
+
 .eye:hover {
   color: #007efc;
   cursor: pointer;
