--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -39,7 +39,9 @@
   width: 60%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  gap: 1rem;
+  padding: 0rem 1rem;
 }
 .footer-text{
   display: flex;
@@ -47,7 +49,7 @@
   align-items: center;
 }
 .footer-2 {
-  width: 25%;
+  width: fit-content
 }
 
 .footer-title {
