validation needs to be done on phone number #676

--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -73,6 +73,11 @@
   justify-content: center;
 }
 
+.btn-div .btn:disabled{
+  cursor: none;
+
+}
+
 .contact-col button {
   width: max-content;
   justify-content: center;
