--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,125 +1,118 @@
 .about {
-  margin: 100px auto;
-  justify-items: center;
-  justify-content: space-between;
-  width: 90%;
-  padding: 20px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  box-shadow: 0 0 20px 2px rgba(0, 0, 0, 1);
-}
-
-.about-left {
-  flex-basis: 40%;
-  position: relative;
-  width: 250px;
-  margin: 0 10px;
-}
-
-#dark.about-heading {
-  color: white;
-}
-
-.about-right {
-  flex-basis: 56%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  padding: 50px 20px;
+  background: linear-gradient(135deg, #44b2fb, #4c5eff);
+  color: #333;
+  transition: background 0.3s ease, color 0.3s ease;
+}
+
+.about.dark {
+  background: linear-gradient(to bottom right, #263238, #37474f);
+  color: #fff;
+}
+
+.about-content {
+  max-width: 1200px;
+  width: 100%;
+}
+
+.about-heading-container {
   text-align: center;
+  margin-bottom: 30px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.about-heading {
+  font-size: 2.9rem;
+  margin-bottom: 10px;
+  color: #ffffff;
+  text-shadow: 1px 1px 2px rgb(4, 45, 193), 0 0 1em rgb(0, 221, 255), 0 0 0.2em rgb(0, 221, 255);
+}
+
+.about-subtitle {
+  font-size: 1.5rem;
+  color: #ffffff;
+  /* text-shadow: 1px 1px 2px rgb(55, 0, 255), 0 0 1em rgb(0, 81, 255), 0 0 0.2em rgb(0, 17, 255); */
+  text-shadow: 1px 1px 2px rgb(0, 12, 147), 0 0 1em rgb(0, 221, 255), 0 0 0.2em rgb(0, 221, 255);
+
+
+}
+
+.about-sections {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.about-section {
+  flex: 1 1 30%;
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, background-color 0.3s ease;
+  position: relative;
+  overflow: hidden;
+}
+
+.about-section:hover {
+  transform: translateY(-10px);
+  background-color: #e4f6ff;
+  box-shadow: 0 2px 8px rgb(5, 129, 143);
+
+}
+
+.about-section h3 {
+  font-size: 1.8rem;
+  color: #0277bd;
+  margin-bottom: 15px;
+  transition: color 0.3s ease, text-decoration 0.4s ease;
+}
+
+.about-section:hover h3 {
+  color: #021ebd;
+  text-decoration: underline;
+
+}
+
+.about-section:hover p {
+  color: #1c526b;
+}
+.about-section p {
+  font-size: 1rem;
+  line-height: 1.6;
+  color: #455a64;
 }
 
 .about-img {
   width: 100%;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: transform 0.5s ease-in-out;
-  /* Ensuring smooth transition */
-  display: block;
+  height: auto;
+  margin-top: 20px;
+  border-radius: 8px;
+  transition: transform 0.3s ease;
 }
 
-.about-img:hover {
-  transform: scale(0.8);
-  /* Zoom out effect on hover */
-  z-index: 2;
+.about-section:hover .about-img {
+  transform: scale(1.05);
 }
 
-.about h3 {
-  font-weight: 600;
-  font-size: 16px;
+.about-mission,
+.about-commitment,
+.about-community {
+  animation: fadeIn 1s ease-in-out;
 }
 
-.about h2 {
-  font-weight: 600;
-  font-size: 35px;
-  margin: 10px 0;
-  max-width: 400px;
-  text-align: center;
-  text-decoration: underline;
-  /* This line adds an underline */
-}
-
-.about p {
-  margin-bottom: 15px;
-}
-
-.lightbox {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
-}
-
-.lightbox-img {
-  max-width: 80%;
-  max-height: 80%;
-  margin: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-.close-btn {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 24px;
-  cursor: pointer;
-}
-
-@media (max-width: 600px) {
-  .about {
-    flex-direction: column;
-    align-items: center;
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
   }
-
-  #heading {
-    display: flex;
-    justify-content: center;
-  }
-
-  .about-left,
-  .about-right {
-    flex-basis: 100%;
-    margin-bottom: 30px;
-    flex-direction: column;
-  }
-
-  .about-img {
-    border-radius: 15px;
-  }
-
-  .about h2 {
-    font-size: 28px;
-    text-align: start;
-  }
-
-  .about p {
-    text-align: center;
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
